--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,34 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^4.0.0
+  file_picker: ^4.4.0
+  firebase_core: ^1.12.0
+  firebase_messaging: ^11.2.7
+  firebase_crashlytics: ^2.5.2
+  firebase_performance: ^0.8.0+6
+  flutter_advanced_drawer: ^1.2.2
+  flutter_screenutil: ^5.0.0
+  flutter_svg: ^1.0.3
+  geocoding: ^2.0.0
+  geolocator: ^8.0.5
+  get: ^4.1.4
+  get_it: ^7.1.3
+  google_maps_flutter: ^2.1.5
+  heic_to_jpg: ^0.2.0
+  image_picker: ^0.8.0+1
+  intl: ^0.17.0
+  logger: ^1.0.0
+  modal_progress_hud_nsn: ^0.2.1
+  permission_handler: ^9.0.2
+  provider: ^6.0.3
+  shared_preferences: ^2.0.5
+  shimmer: ^2.0.0
+  url_launcher: ^6.0.7
+  device_info_plus: ^4.0.0
+  connectivity_plus: ^4.0.1
+dependency_overrides:
+  firebase_messaging_platform_interface: 3.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
