--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,41 +10,41 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^4.0.0
-  file_picker: ^4.4.0
-  firebase_core: ^1.12.0
-  firebase_messaging: ^11.2.7
-  firebase_crashlytics: ^2.5.2
-  firebase_performance: ^0.8.0+6
+  dio: ^5.1.2
+  file_picker: ^5.3.1
+  firebase_performance: ^0.9.2+2
   flutter_advanced_drawer: ^1.2.2
   flutter_screenutil: ^5.0.0
-  flutter_svg: ^1.0.3
+  flutter_svg: ^2.0.6
   geocoding: ^2.0.0
-  geolocator: ^8.0.5
+  geolocator: ^9.0.2
   get: ^4.1.4
   get_it: ^7.1.3
   google_maps_flutter: ^2.1.5
   heic_to_jpg: ^0.2.0
   image_picker: ^0.8.0+1
-  intl: ^0.17.0
+  intl: ^0.18.1
   logger: ^1.0.0
-  modal_progress_hud_nsn: ^0.2.1
-  permission_handler: ^9.0.2
+  modal_progress_hud_nsn: ^0.4.0
+  permission_handler: ^10.2.0
   provider: ^6.0.3
   shared_preferences: ^2.0.5
-  shimmer: ^2.0.0
+  shimmer: ^3.0.0
   url_launcher: ^6.0.7
-  device_info_plus: ^4.0.0
+  device_info_plus: ^9.0.2
   connectivity_plus: ^4.0.1
-  firebase_auth: ^3.11.2
-  cloud_firestore: ^3.5.1
   google_sign_in: ^6.1.3
   flutter_facebook_auth: ^5.0.11
   sign_in_with_apple: ^4.3.0
   crypto: ^3.0.3
   github_sign_in: ^0.0.5-dev.4
+  firebase_core: ^2.13.1
+  firebase_messaging: ^14.6.2
+  firebase_crashlytics: ^3.3.2
+  firebase_auth: ^4.6.2
+  cloud_firestore: ^4.8.0
 dependency_overrides:
-  firebase_messaging_platform_interface: 3.1.6
+  # firebase_messaging_platform_interface: 3.1.6
 
 
   cupertino_icons: ^1.0.2
@@ -61,9 +61,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
